--- a/Project/src/css/detail.css
+++ b/Project/src/css/detail.css
@@ -86,6 +86,7 @@
     background-color: var(--blue);
     gap: 0.15em;
     width: 100%;
+    height: 100%;
 }
     .pattern-materials-area > .cell {
         flex-grow: 1;
@@ -113,14 +114,14 @@
 @media only screen and (max-width:580px) {
     .detail-content .subtitle {
         grid-column: span 12;
-        padding: 0.5em;
+        padding: 0.25em;
     }
     .detail-content .area {
         grid-column: span 12;
     }
     .detail-content .subtitle{
-        background-color: var(--blue);
-        color: white;
+        background-color: var(--grey-medium);
+        
     }
 }
 
